<resources>
    <string name="app_name">InterfaceServeur</string>
    <string name="selection_table">Selection des tables</string>
    <string name="table1">Table 1</string>
    <string name="table2">Table 2</string>
    <string name="table3">Table 3</string>
    <string name="table4">Table 4</string>
    <string name="table5">Table 5</string>
    <string name="valid_button">Valider</string>
    <string name="voir_commande">Voir la commande</string>
    <string name="facture">Imprimer la facture</string>
    <string name="voter">Faire voter les clients</string>
    <string name="register_client">Enregistrer un client</string>
    <string name="table_vide">Table vide</string>
    <string name="day_end">Fin de la journee</string>
    <string name="ajout_plat">Ajouter plat/boisson</string>
    <string name="synchroniser">Recuperer la commande</string>
</resources>
